k8s/database.yml
apiVersion: v1
kind: Service
metadata:
  name: database  
spec:
  selector:
    app: database  
  ports:
    - protocol: TCP
      port: 3306 
      targetPort: 3306 
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  serviceName: "database"
  replicas: 2
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        resources:
          requests:
            memory: "500Mi"  # Mémoire minimum garantie
            cpu: "250m"      # CPU minimum garanti
          limits:
            memory: "1Gi"    # Mémoire maximum autorisée
            cpu: "500m"      # CPU maximum autorisé
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
